# msu_eos

./: README.md
doc/: theory.tex
scottrun/: CMakeCache.txt  CMakeLists.txt  Makefile  chitest.cc  cmake_install.cmake  eostest  eostest.cc  eostest_fixedS.cc  eostest_vsepsilon.cc
scottrun/figs/: cs2.py
scottrun/parameters/: parameters.txt
scottrun/results/: T130.txt  T140.txt
scottrun/results_eos1/: T100.txt  T110.txt  T120.txt  T130.txt  T140.txt  T150.txt  T160.txt
scottrun/results_eos2/: T100.txt  T110.txt  T120.txt  T130.txt  T140.txt  T150.txt  T160.txt
scottrun/results_noint/: T100.txt  T110.txt  T120.txt  T150.txt  T160.txt
software/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
software/include/msu_eos/: eos.h  resonances.h
software/src/: canonical.cc  eos.cc  eos_vsepsilon.cc  interaction.cc  resinfo.cc  reslist.cc  reslistio.cc
